-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b23
* Reproduce
```
${JDK}/bin/java \
-Xcomp -XX:CompilationMode=high-only
```
* Symptom
```
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/sonia/fool/openjdk/jdk/src/hotspot/share/compiler/compileBroker.cpp:1167), pid=21816, tid=21821
# assert(comp != __null) failed: Ensure we have a compiler
#
# JRE version: OpenJDK Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.sonia.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.sonia.jdk, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9cfe34] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, CompileTask::CompileReason, Thread*)+0xc4
```
```
${JDK}/bin/java \
-Xcomp -XX:CompilationMode=high-only
```
* Symptom
```
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/sonia/fool/openjdk/jdk/src/hotspot/share/compiler/compileBroker.cpp:1167), pid=21816, tid=21821
# assert(comp != __null) failed: Ensure we have a compiler
#
# JRE version: OpenJDK Runtime Environment (14.0) (fastdebug build 14-internal+0-adhoc.sonia.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.sonia.jdk, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9cfe34] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, CompileTask::CompileReason, Thread*)+0xc4
```
- relates to
-
JDK-8227003 Add high-level JIT compilation mode control mechanism
-
- Resolved
-
-
JDK-8234499 [Graal] compiler/compilercontrol/CompilationModeHighOnlyTest.java test fails with timeout
-
- Resolved
-