8233885: Test fails with assert(comp != __null) failed: Ensure we have a compiler

Reviewed-by: thartmann, iveresov